# cli-chat

./: README.md  pyproject.toml
chat/: main.py
